--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Environment files
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+dist
+build
+
+# Cache and logs
+.cache
+.npm
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
+
+# TypeScript
+*.tsbuildinfo
+
+# Testing
+coverage
+
+# Vite
+vite.config.ts.timestamp-*
