debug build yaml to copy to dist

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,13 +10,13 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # <-- Important: allows pushing to the repo
+      contents: write
 
     steps:
       - name: Check out the code
         uses: actions/checkout@v3
         with:
-          persist-credentials: false  # sometimes helpful for clarity
+          persist-credentials: false
 
       - name: Use Node
         uses: actions/setup-node@v3
@@ -31,14 +31,58 @@ jobs:
           echo "VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}" > .env
           echo "VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}" >> .env
 
+      # More explicit data copying steps
+      - name: Prepare team data
+        run: |
+          # Ensure directories exist
+          mkdir -p public/data/team
+          
+          # Copy all team assets from src to public
+          if [ -d "src/data/team" ]; then
+            cp -rv src/data/team/* public/data/team/
+            echo "Copied team data from src to public"
+            ls -la public/data/team/
+          fi
+
       - name: Build
         run: npm run build
+
+      # Ensure team data is in dist
+      - name: Copy team data to dist
+        run: |
+          # Create dist/data/team directory if it doesn't exist
+          mkdir -p dist/data/team
+          
+          # Copy from public to dist
+          cp -rv public/data/team/* dist/data/team/ || echo "No team data to copy from public"
+          
+          # Also try copying directly from src as backup
+          cp -rv src/data/team/* dist/data/team/ || echo "No team data to copy from src"
+
+      # Verify the build output
+      - name: Verify build artifacts
+        run: |
+          echo "Contents of dist/data/team:"
+          ls -la dist/data/team/ || echo "dist/data/team directory not found!"
+          
+          # Check specific files
+          if [ -f "dist/data/team/06.md" ]; then
+            echo "✅ 06.md exists in build output"
+          else
+            echo "❌ 06.md missing from build output"
+          fi
+          
+          if [ -f "dist/data/team/06.png" ]; then
+            echo "✅ 06.png exists in build output"
+          else
+            echo "❌ 06.png missing from build output"
+          fi
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          publish_branch: gh-pages   # Explicitly set the target branch
-          force_orphan: true         # Creates or overwrites branch if needed
+          publish_branch: gh-pages
+          force_orphan: true
           commit_message: "Deploy from GitHub Actions"
