--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,17 +47,21 @@ jobs:
       - name: Build
         run: npm run build
 
+      # Copy 404.html to dist if it exists in public
+      - name: Copy 404.html
+        run: |
+          if [ -f "public/404.html" ]; then
+            cp public/404.html dist/404.html
+            echo "✅ 404.html copied to dist"
+          else
+            echo "❌ 404.html not found in public directory"
+          fi
+
       # Ensure team data is in dist
       - name: Copy team data to dist
         run: |
-          # Create dist/data/team directory if it doesn't exist
           mkdir -p dist/data/team
-          
-          # Copy from public to dist
-          cp -rv public/data/team/* dist/data/team/ || echo "No team data to copy from public"
-          
-          # Also try copying directly from src as backup
-          cp -rv src/data/team/* dist/data/team/ || echo "No team data to copy from src"
+          cp -rv public/data/team/* dist/data/team/ || echo "No team data to copy"
 
       # Verify the build output
       - name: Verify build artifacts
