--- a/.pages.yml
+++ b/.pages.yml
@@ -1,25 +1,65 @@
 # .pages.yml
-# Configuration for cmspages to manage content in public/data/showcase
+# Configuration for Pages CMS to manage content
 
-collections:
-  - name: "showcase" # Name of the collection
+# Media configuration (basic example, customize paths as needed)
+media:
+  input: public/cms-media # Folder where CMS looks for media files in your repo
+  output: /cms-media      # Public path prefix for media URLs in your site
+
+# Content definitions
+content:
+  - name: "showcase_projects" # Unique machine name for this content entry
     label: "Showcase Projects" # Display label in the CMS
-    description: "Projects featured in the showcase."
-    files: # This collection is defined by one or more files
-      - name: "projects_list" # An internal name for this file configuration
-        label: "All Showcase Projects" # Label for this specific file in the CMS
-        file: "public/data/showcase/manifest.json" # Path to the data file
-        format: "json" # Data format
-        # Specifies that the 'projects' key in the JSON file contains the list of items
-        # and each item in that list has the following fields.
-        fields: # Fields for the top-level structure of manifest.json
-          - name: "projects" # This is the array key in manifest.json
-            label: "Projects"
-            widget: "list" # Indicates this field is a list of items
-            fields: # Fields for each item within the 'projects' list
-              - {label: "ID", name: "id", widget: "string", required: true, hint: "Unique identifier, e.g., work-1"}
-              - {label: "Title", name: "title", widget: "string", required: true}
-              - {label: "Client", name: "client", widget: "string"}
-              - {label: "Year", name: "year", widget: "string"} # Or number, depending on CMS capabilities
-              - {label: "Description", name: "description", widget: "text", required: true}
-              - {label: "Image URL", name: "imageUrl", widget: "string", hint: "URL of the project image"}
+    type: "file" # This content entry manages a single file
+    path: "public/data/showcase/manifest.json" # Path to the data file
+    format: "json" # Data format of the file
+    fields: # Defines the structure of manifest.json
+      - name: "projects" # This matches the top-level key in manifest.json
+        label: "Projects List"
+        type: "object" # The "projects" key holds an array of objects
+        list: true # Indicates this field is a list of items
+        description: "List of all showcase projects."
+        fields: # Fields for each individual project object within the 'projects' list
+          - name: "id"
+            label: "ID"
+            type: "string"
+            required: true
+            description: "Unique identifier, e.g., work-1"
+          - name: "title"
+            label: "Title"
+            type: "string"
+            required: true
+          - name: "client"
+            label: "Client"
+            type: "string"
+          - name: "year"
+            label: "Year"
+            type: "string" # Using string for flexibility; could be number if strictly numeric
+          - name: "description"
+            label: "Description"
+            type: "text" # 'text' is suitable for multi-line descriptions
+            required: true
+          - name: "imageUrl"
+            label: "Image URL"
+            type: "string" # If images are externally hosted URLs
+            # If you want to use CMS-managed images for these, change type to "image"
+            # and ensure your 'media' configuration above is set up.
+            description: "URL of the project image. For CMS-managed images, use type: image."
+
+# Optional: components:
+# Define reusable groups of fields here if needed in the future.
+# Example:
+# components:
+#   seo:
+#     label: SEO Settings
+#     type: object
+#     fields:
+#       - { name: meta_title, label: Meta Title, type: string }
+#       - { name: meta_description, label: Meta Description, type: text }
+
+# Optional: settings:
+# Global CMS settings for this repository/branch.
+# Example:
+# settings:
+#   content:
+#     merge: false # Set to true to merge existing file content with form data on save
