Update public/data/showcase/manifest.json (via Pages CMS)

--- a/public/data/showcase/manifest.json
+++ b/public/data/showcase/manifest.json
@@ -5,8 +5,8 @@
       "title": "Interactive Art Installation",
       "client": "National Gallery",
       "year": "2023",
-      "description": "An immersive digital experience that transforms classic paintings into interactive elements that respond to visitor movement.",
-      "imageUrl": "https://placehold.co/600x400/1a1a2e/ffffff?text=Art+Installation"
+      "description": "Holding Item",
+      "imageUrl": "https://img.freepik.com/free-photo/forest-website-layout-blank-banner_53876-132285.jpg?ga=GA1.1.42484267.1747921681&semt=ais_hybrid&w=740"
     },
     {
       "id": "work-2",
