remove the zero ro hero language

--- a/public/data/workshops/workshop-04-codex/manifest.json
+++ b/public/data/workshops/workshop-04-codex/manifest.json
@@ -1,5 +1,5 @@
 {
-  "title": "From Zero to Hero: Mastering OpenAI Codex",
+  "title": "Mastering OpenAI Codex - Untested Agentic Output",
   "pages": [
     {
       "slug": "README.md",
