fully updated to use API and documented

--- a/workshop-builder/.env.example
+++ b/workshop-builder/.env.example
@@ -8,7 +8,7 @@
 # Gemini Flash 2.5 API Key for deep research capabilities
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# OpenAI API Key for Codex CLI integration
+# OpenAI API Key for direct API integration
 OPENAI_API_KEY=your_openai_api_key_here
 
 # GitHub Personal Access Token for repository operations
@@ -25,23 +25,17 @@ GITHUB_REPO_OWNER=your_github_username
 GITHUB_REPO_NAME=your_repository_name
 
 # =============================================================================
-# OPENAI CODEX FRAMEWORK CONFIGURATION
+# OPENAI API CONFIGURATION
 # =============================================================================
 
-# Enable/disable OpenAI Codex CLI integration
-CODEX_CLI_ENABLED=true
+# OpenAI model to use (gpt-4o, gpt-4o-mini, gpt-3.5-turbo)
+OPENAI_MODEL=gpt-4o
 
-# Path to the Codex CLI executable (default: 'codex' in PATH)
-CODEX_CLI_PATH=codex
+# Maximum tokens for OpenAI generation
+OPENAI_MAX_TOKENS=4000
 
-# OpenAI Codex model to use
-CODEX_MODEL=code-davinci-002
-
-# Maximum tokens for Codex generation
-CODEX_MAX_TOKENS=4000
-
-# Temperature for Codex generation (0.0-1.0, lower = more deterministic)
-CODEX_TEMPERATURE=0.1
+# Temperature for OpenAI generation (0.0-1.0, lower = more deterministic)
+OPENAI_TEMPERATURE=0.1
 
 # =============================================================================
 # AGENTS.MD SUPPORT CONFIGURATION
@@ -63,7 +57,7 @@ ERROR_RECOVERY_ENABLED=true
 # Maximum retry attempts for failed operations
 MAX_RETRY_ATTEMPTS=3
 
-# Enable/disable fallback generation when Codex CLI fails
+# Enable/disable fallback generation when OpenAI API fails
 FALLBACK_GENERATION_ENABLED=true
 
 # =============================================================================
@@ -112,7 +106,7 @@ LOG_LEVEL=INFO
 
 # Example: Custom timeout settings
 # API_TIMEOUT=30
-# CODEX_CLI_TIMEOUT=60
+# OPENAI_API_TIMEOUT=60
 
 # Example: Custom rate limiting
 # GEMINI_RATE_LIMIT=10
@@ -135,7 +129,7 @@ LOG_LEVEL=INFO
 
 # 1. Copy this file to .env in the workshop-builder directory
 # 2. Fill in all required API keys and configuration values
-# 3. Ensure the OpenAI Codex CLI is installed and accessible
+# 3. Ensure OpenAI API key has appropriate permissions
 # 4. Verify GitHub token has appropriate repository permissions
 # 5. Test configuration by running: python orchestrator/config.py
 
