--- a/workshop-builder/requirements.txt
+++ b/workshop-builder/requirements.txt
@@ -16,8 +16,8 @@ pydantic>=2.0.0               # Data validation and settings management
 # Google Gemini Flash 2.5 Integration
 google-generativeai>=0.3.0    # Official Google Generative AI client
 
-# OpenAI API Integration (for Codex CLI support)
-openai>=1.0.0                 # Official OpenAI Python client
+# OpenAI API Integration (direct REST API calls)
+openai>=1.52.0                # Official OpenAI Python client with latest features
 
 # =============================================================================
 # GITHUB INTEGRATION
@@ -113,7 +113,7 @@ aiofiles>=23.0.0              # Async file operations
 # SYSTEM AND PROCESS MANAGEMENT
 # =============================================================================
 
-# Process Management (for Codex CLI integration)
+# Process Management (for system monitoring)
 psutil>=5.9.0                 # System and process utilities
 
 # =============================================================================
@@ -143,7 +143,7 @@ typing-extensions>=4.7.0     # Extended typing support
 # 4. Verify installation: python -c "import google.generativeai, openai, github; print('✓ All dependencies installed')"
 
 # Version Compatibility:
-# - Python 3.10+ required for OpenAI Codex Framework compatibility
+# - Python 3.10+ required for OpenAI API compatibility
 # - All packages tested with Python 3.10, 3.11, and 3.12
 # - Some packages may have newer versions available; update as needed
 
